fix(core): xs icon buttons have wrong height

--- a/core/src/components/cat-button/cat-button.scss
+++ b/core/src/components/cat-button/cat-button.scss
@@ -243,8 +243,8 @@ $button-sizes: (
 
     &.cat-button-icon {
       width: $-total-height;
-      padding-left: 0;
-      padding-right: 0;
+      height: $-total-height;
+      padding: 0;
     }
   }
 
